...
                                <state key="normal" title="2"/>
                                <connections>
                                    <action selector="twoAction:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Dpg-6H-fli"/>
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="MB2-DZ-7tQ">
                                <rect key="frame" x="330.66666666666669" y="335.66666666666669" width="33" height="78"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="33" id="qSj-Ig-egE"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="55"/>
                                <state key="normal" title="3"/>
                                <connections>
...
                                    <action selector="nineAction:" destination="BYZ-38-t0r" eventType="touchUpInside" id="hLr-uI-9st"/>
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="GCP-Jp-Ebp">
                                <rect key="frame" x="30" y="433.66666666666669" width="130" height="78"/>
                                <fontDescription key="fontDescription" type="system" pointSize="55"/>
                                <state key="normal" title="Eval"/>
                                <connections>
                                    <action selector="evalAction:" destination="BYZ-38-t0r" eventType="touchUpInside" id="R0h-nb-TWv"/>
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="MEQ-qb-35Q">
                                <rect key="frame" x="50" y="681" width="122" height="78"/>
                                <fontDescription key="fontDescription" type="system" pointSize="55"/>
                                <state key="normal" title="Enter"/>
                                <connections>
                                    <action selector="enterAction:" destination="BYZ-38-t0r" eventType="touchUpInside" id="XpI-TP-9uR"/>
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="CNl-GK-n62">
                                <rect key="frame" x="288" y="681" width="76" height="78"/>
                                <fontDescription key="fontDescription" type="system" pointSize="55"/>
                                <state key="normal" title="+/-"/>
                                <connections>
                                    <action selector="negateAction:" destination="BYZ-38-t0r" eventType="touchUpInside" id="BYj-Hs-OkF"/>
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3kO-Ex-6n0">
                                <rect key="frame" x="50" y="764" width="34" height="78"/>
...
                                    <action selector="eightAction:" destination="BYZ-38-t0r" eventType="touchUpInside" id="gwW-4y-gI0"/>
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="IRN-rZ-T9C">
                                <rect key="frame" x="283" y="433.66666666666669" width="101" height="78"/>
                                <fontDescription key="fontDescription" type="system" pointSize="55"/>
                                <state key="normal" title="CLR"/>
                                <connections>
                                    <action selector="clearAction:" destination="BYZ-38-t0r" eventType="touchUpInside" id="1W9-hX-73o"/>
                                </connections>
                            </button>
                        </subviews>
                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
...
