...
                                <connections>
                                    <action selector="entryButtonAction:" destination="ht1-He-e3d" eventType="touchUpInside" id="GUV-iv-anA"/>
                                </connections>
                            </button>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Enter Name:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4Uz-6C-58C">
                                <rect key="frame" x="20" y="76" width="142" height="33"/>
                                <fontDescription key="fontDescription" type="system" pointSize="27"/>
                                <nil key="textColor"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="e.g. Joe Bloggs" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wIC-u4-q6A">
                                <rect key="frame" x="20" y="124" width="99.5" height="17"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
...
                                        <integer key="value" value="8"/>
                                    </userDefinedRuntimeAttribute>
                                    <userDefinedRuntimeAttribute type="boolean" keyPath="layer.masksToBounds" value="YES"/>
                                </userDefinedRuntimeAttributes>
                            </label>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="SQf-DZ-Chh">
                                <rect key="frame" x="352" y="460" width="42" height="30"/>
                                <state key="normal" title="Next&gt;"/>
                                <connections>
                                    <action selector="attendingNextAction:" destination="BYZ-38-t0r" eventType="touchUpInside" id="ahe-Ij-BFN"/>
                                    <action selector="attendingNextButton:" destination="LE7-aP-nYg" eventType="touchUpInside" id="QxC-Ec-EIT"/>
                                </connections>
                            </button>
...
